# networking-vpp

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  AUTHORS  CENTOS_7-guide.rst  CONTRIBUTING.rst  ChangeLog  HACKING.rst  MANIFEST.in  README.md  README.rst  README_etcd_ssl.txt  README_taas.txt  bindep.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: 1901pre.yaml  functions  make-config.py  override-defaults  plugin.sh  settings  startup.yaml
doc/source/: conf.py  index.rst  installation.rst
doc/source/devref/: index.rst
etc/neutron/plugins/ml2/: ml2_conf_vpp.ini
examples/: etcd_role_conf_sample.json
networking_vpp/: _i18n.py  backward_compatibility.py  compat.py  config_opts.py  constants.py  etcd.py  etcd_client_secured.py  etcd_jwt.py  etcd_path_helper.py  etcd_paths.py  etcd_signed.py  etcdutils.py  exceptions.py  ext_manager.py  extension.py  feature.py  jwt_agent.py  jwt_utils.py  mech_vpp.py  taas_vpp.py  version.py
networking_vpp/agent/: exceptions.py  gpe.py  server.py  taas_vpp_agent.py  utils.py  vpp.py
networking_vpp/common/: jwt.py  jwt_agent.py  tags.py
networking_vpp/db/: db.py  models.py
networking_vpp/db/migration/alembic_migrations/: env.py  script.py.mako
networking_vpp/db/migration/alembic_migrations/versions/: 00656e76747070_initial_branchpoint.py  CONTRACT_HEAD  EXPAND_HEAD  HEADS  liberty
networking_vpp/db/migration/alembic_migrations/versions/liberty/expand/: 87654321747070_initial.py
networking_vpp/db/migration/alembic_migrations/versions/mitaka/expand/: 6a909ba3748c_add_vpp_journal_table_for_etcd_.py
networking_vpp/db/migration/alembic_migrations/versions/newton/contract/: 12345678747070_initial.py
networking_vpp/db/migration/alembic_migrations/versions/newton/expand/: 6a909ba3748c_add_vpp_journal_table_for_etcd_.py
networking_vpp/db/migration/alembic_migrations/versions/ocata/contract/: b5b38e26cfb7_gpe_driver_updates.py  d0369f1d9e85_l3_plugin_for_vpp.py
networking_vpp/db/migration/alembic_migrations/versions/ocata/expand/: 51f8d5ee1a46_l3_plugin_for_vpp.py  78767e76942b_gpe_driver_updates.py
networking_vpp/services/l3_router/: l3_vpp.py
networking_vpp/services/trunk/: trunk_vpp.py
networking_vpp/tests/functest/: functest_setup.sh
networking_vpp/tests/unit/: test_compat.py  test_etcdcom.py  test_etcdsecured.py  test_features.py  test_jwt_utils.py  test_l3_vpp.py  test_l3_vpp.py-suspended  test_l3_vpp.py.disabled  test_mech.py  test_utils.py  test_vppforwarder.py
networking_vpp/tools/: backup.sh  chk_vpp_script.sh  dump_acl_info.py  dump_tag_info.py  etcd_role_conf.py  is_alive.py  keepalived.backup.conf  keepalived.master.conf  master.sh  stats.py  test_etcd_content.py  test_vpp_content.py  watch_changes.py
networking_vpp/types/: type_gpe.py
networking_vpp/utils/: compat.py  device_monitor.py  file_monitor.py  pyinotify_eventlet_notifier.py
rpm/: networking-vpp-agent.service  networking-vpp.spec
test-scripts/: boot-vm  test-dhcp.sh  test-l3.sh  test-sec-group
tests/: boot-vm  test-dhcp.sh
tools/: dump-acl-info.py  etcd_role_conf.py  test-etcd-content.py  tox_install.sh  watch-changes
vagrant/: README.md  Vagrantfile  disable_numa.diff  init_vpp_agent.diff  local.conf  setup.sh
